--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Rubik&family=Secular+One&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" href="./src/img/one-piece-logo.png" type="image/x-icon">
 
@@ -102,37 +102,7 @@
 
         </div>
 
-        <div class="personagem">
-
-            <img class="img" src="./src/img/background-ussop.jpg" alt="Imagem ussop">
-
-            <div class="conteudo">
-
-                <i class="logo"></i>
-
-                <h2 class="nome-personagem">Usopp</h2>
-
-                <p class="descricao">Quarto integrante da tripulação de Luffy, Usopp cresceu bastante no decorrer do anime. E sua recompensa acompanhou esse desenvolvimento, indo de $30.000.000 para $500.000.000. Seus atos, inclusive, já lhe renderam títulos como "Deus" Usopp.
-                    Seu nariz comprido e a origem de seu nome fazem com que os demais tripulantes brinquem sobre ele ser mentiroso, mas o costume de contar histórias fantásticas vem da infância, quando passou a fazer isso como forma de lidar com o abandono de seu pai e a morte de sua mãe.</div>p>
-
-        </div>
-
-        <div class="personagem">
-
-            <img class="img" src="./src/img/background-ace.jpg" alt="Imagem Ace">
-
-            <div class="conteudo">
-
-                <i class="logo"></i>
-
-                <h2 class="nome-personagem">Portgas D. Ace</h2>
-
-                <p class="descricao">
-                    Filho do falecido Rei dos Piratas, Gol D. Roger, Ace foi adotado por Monkey D. Garp antes mesmo de nascer, a pedido de seu próprio pai biológico. Garp recebeu o menino como seu próprio neto e o criou como um irmão para Luffy e Sabo. Mais inteligente, educado e "suportável" que Luffy, Ace tem como uma de suas características em comum com seu irmão mais novo a imprudência em suas ações como pirata.
-                </p>
-            </div>
-
-        </div>
+        
 
     </main>
 
@@ -166,21 +136,6 @@
                 <img src="./src/img/tripulacao-sanji.png" alt="Tripulação Sanji">
             </button>
         </li>
-
-        <li>
-            <button class="botao">
-                <img src="./src/img/ussop.jpg" alt="Tripulação Ussop">
-            </button>
-        </li>
-
-        <li>
-            <button class="botao">
-                <img src="./src/img/ace.jpg" alt="Tripulação Ace">
-            </button>
-        </li>
-
-
-
 
     </ul>
 
